--- a/ansible_scripts/templates/server.conf.j2
+++ b/ansible_scripts/templates/server.conf.j2
@@ -5,10 +5,10 @@ sndbuf 0
 rcvbuf 0
 
 # Config sécurité. ON N'EN A PAS BESOIN
-#ca ca.crt
-#cert server.crt
-#key server.key
-#dh dh.pem
+ca /etc/openvpn/ca.crt
+cert /etc/openvpn/server.crt
+key /etc/openvpn/server.key
+dh /etc/openvpn/dh.pem
 #tls-auth ta.key 0
 
 # cipher AES-256-CBC
