Change VPN configuration to add txqueuelen of 1000
Changing this parameters allows us to have throughput bitrates
closer to the theoretical bitrate for our VPS

--- a/ansible_scripts/templates/client.conf.j2
+++ b/ansible_scripts/templates/client.conf.j2
@@ -21,6 +21,7 @@ cipher none
 #setenv opt block-outside-dns
 #key-direction 1
 
-tun-mtu 1444
-mssfix 1400
+tun-mtu 1470
+mssfix 1440
+txqueuelen 1000
 verb 3
